Proposal feature: estimation, admin editor, PDF generation, blob storage; CSRF + security headers; server-side admin guards

--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.16.1",
+    "@react-pdf/renderer": "^4.3.0",
+    "@vercel/blob": "^2.0.0",
     "date-fns": "^4.1.0",
     "js-sha256": "^0.11.1",
     "next": "15.5.3",
     "nodemailer": "^7.0.6",
+    "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^5.4.149",
     "prisma": "^6.16.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
